@@ -1,5 +1,9 @@
-Jun 08, 2007 - chris ---------------------------------------------------
+Jun 10, 2007 - chris ---------------------------------------------------
                       release of hamsterdb-0.4.3
+
+Jun 10, 2007 - chris
+o fixed a small memory leak (in-memory db only, when using extended keys
+    and a lot of SMOs occur, because many keys are deleted)
 
 Jun 04, 2007 - chris
 o fixed configure.in - do not build unittests if cppunit is not
